const mongoose = require('mongoose');

const otpSchema = new mongoose.Schema({
  email: {
    type: String,
    required: true,
  },
  otp: {
    type: String,
    required: true,
  },
  createdAt: {
    type: Date,
    default: Date.now,
    expires: 300, // Tự động xóa document này sau 300 giây (5 phút)
  },
});

module.exports = mongoose.model('Otp', otpSchema);